# tlacml

./: .gitignore  README.md
F1/: .env.example  .gitignore  Makefile  README.md  SignalStrategy.html  backtest.py  ensemble.py  env.py  main.py  ppo.py  pyproject.toml  requirements.txt  setup.cfg  train.py
F1/deploy/: trading_log.txt
F1/docs/: README.md  TRADING_SETUP.md
F1/models/: cnn_model.pt  gru_model.pt  lstm_model.pt  mlp_model.pt  ppo_model.pt
F1/references/deploy/: check_trading.sh  start_trading.sh  trading_log.txt
F1/reports/: SignalStrategy.html
F1/src/: backtest.py  config.py  data.py  ensemble.py  env.py  live_trade.py  main.py  ppo.py  predict.py  train.py
F1/src/cli/: __init__.py
F1/src/eval/: backtest.py
F1/src/live/: live_trade.py
F1/src/modeling/: ensemble.py  env.py  models.py  ppo.py  predict.py  prediction.py  train.py
F1/src/timeseries/: dataset.py  features.py
Lightning_practice/: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
Lightning_practice/M1_ClearML_practice-HARD/: .env.template  .gitignore  Makefile  README.md  cb_model.cbm  main.py  pyproject.toml
Lightning_practice/M2/: .gitignore  Makefile  README.md  main.py  pyproject.toml
Lightning_practice/M2/light/: data.py
Lightning_practice/light/: data.py  module.py
